Interim changes before new site
Update sponsors

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
         <script src="./js/clock.js"></script>
 
         <style>
-            #event-info a {
-                color: #fff;
-                font-weight: bold;
-            }
             .nav-left img{
               height: 100px;
             }
@@ -40,10 +36,8 @@
             <h1 id="mobile-close">X</h1>
         </div>
         <div class="nav-mobile-content">
-            <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="event-info.html">Event Information</a>
             <a href="/safeguarding">Safeguarding</a>
         </div>
       </div>
@@ -64,10 +58,8 @@
                     <div class="nav-right">
                         <div class="nav-right-content">
                             <div class="links">
-                                <a href="#event-info">About Us</a>
                                 <a href="#sponsors">Sponsors</a>
                                 <a href="#team">Team</a>
-                                <a href="event-info.html">Event Information</a>
                                 <a href="/safeguarding">Safeguarding</a>
                             </div>
                             <div class="nav-mobile"></div>
@@ -76,9 +68,8 @@
                     </div>
                 </div>
             <div class="header-content">
-                <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands 4.0? </span></span></h1>
-                <h3>26<sup>th</sup> - 27<sup>th</sup> October, Millennium Point, Birmingham</h3>
-                <a href="/event-info.html"><button id="apply-button">Event Information</button></a>
+                <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands 5.0? </span></span></h1>
+                <h3>22<sup>nd</sup> - 25<sup>th</sup> October, 2020</h3>
                 <a href="sponsorship.pdf"><button id="apply-button">Sponsor Us</button></a>
 
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
@@ -93,101 +84,7 @@
         </section>
         <section id="event-countdown">
             <div class="container">
-                <img src="./images/confetti.png"/>
-                <h3>HackTheMidlands 5.0<br/><span id="countdown-description"></span></h3>
-                <div id="countdown">
-                    <div>
-                        <span class="days"></span>
-                        <div class="smalltext">Days</div>
-                    </div>
-                    <div>
-                        <span class="hours"></span>
-                        <div class="smalltext">Hours</div>
-                    </div>
-                    <div>
-                        <span class="minutes"></span>
-                        <div class="smalltext">Minutes</div>
-                    </div>
-                    <div>
-                        <span class="seconds"></span>
-                        <div class="smalltext">Seconds</div>
-                    </div>
-                </div>
-            </div>
-            <div id="faq-slit-top"></div>
-        </section>
-        <section id="event-info">
-            <div class="container" id="faq">
-                <h1>FAQ</h1>
-                <hr/>
-                <div class="faq-post">
-                    <h2>What is <span class="span-capital">HackThe<span>Midlands?</span></span></h2>
-                    <p>HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 26th - 27th October at Millennium Point.</p>
-                    <p>Over the 24 hours, people aged 14+ of all skill levels <b>(you don't have to be a professional or a student! Just be lovely, passionate and interested in tech!)</b> will come together to share ideas, and create new and awesome projects! (Not sure what a hackathon is? MLH have a great explanation <a href="https://mlh.io/college-administrator-hackathon-guide">here</a>). </p>
-                </div>
-                <div class="faq-post">
-                    <h2>How do I get there?</h2>
-                    <p>HackTheMidlands is hosted in Millennium Point, Curzon Street, Birmingham, B4 7XG. It is really easy to reach by public transport.</p>
-                    <h4>Walking and Cycling</h4>
-                    <p>Millennium Point is within a ten minute walk from the Birmingham town centre and there are cycle parking faciities nearby, though be aware that HackTheMidlands is an overnight event.</p>
-                    <h4>Train</h4>
-                    <p>The nearest train stations are Birmingham New Street (BHM) and Birmingham Moor Street (BMO) which are a 15 minute walk from the venue. Snow Hill Station (BSW) is also within walking distance. The train stations have frequent connections around the West Midlands as well as many cities in England and Birmingham International Airport.</p>
-                    <h4>Bus</h4>
-                    <p>From the city centre to the Millennium Point entrance on Jennings Road, you can take the busses 14 (Stop BS7), 55/55A, 90 or 94 (Stop BS9).</p>
-                    <h4>Car</h4>
-                    <p>The nearest car park is a muti-storey car park adjacent to Milennium Point, managed by Birmingham City Council. There is a height restriction of 2.1m (6'10") for vehicles using this car park. Please contact the council regarding any out of hours enquiries. The car park is accessed via. Jennings Road and Millennium Point is signposted on routes accross the city.</p>
-                    <p>The nearest motorways are the M6, M5 and M42. Use the postcode B4 7AP if you are following a sat nav.</p>
-                </div>
-                <div class="faq-post">
-                    <h2>How much does it cost?</h2>
-                    <p>HackTheMidlands is absolutely <strong>free</strong> to attend! You can get tickets for free via. the link above.</p>
-                </div>
-                <div class="faq-post">
-                    <h2>What are the sleeping arrangements?</h2>
-                    <p>Since HackTheMidlands is a 24 hour hackathon, we reccommend you take regular breaks. We will have an area dedicated for sleeping and we will have gender seperated sleeping areas for Under 18s. We also reccommend that you bring some comfortable clothes to sleep in.</p>
-                </div>
-                <div class="faq-post">
-                    <h2>Can Under 18s Attend?</span></h2>
-                    <p><strong>YES!</strong></p>
-                    <p> As the event is being run with the intent of supporting students aged 14 and over we have taken a number of measures to ensure the safety of our participants.</p>
-                    <p> All attendees under the age of 18 will require a consent form signed by their parents to be granted access to the event. A copy of this form can be found <a href="/docs/safeguarding/ConsentForm.pdf">here</a>.</p>
-                    <p> You will also be required to bring along a completed medical form, which can be found <a href="/docs/medical/MedicalForm.pdf">here</a>.</p>
-                    <p> All attendees will be supervised by DBS-checked adults at all times and are signed in and out of the venue accordingly. </p>
-                    <p> You can find out more about our safeguarding <a href="/safeguarding">here</a>.</p>
-                </div>
-                <div class="faq-post">
-                    <h2>Will there be food and drink?</h2>
-                    <p><strong>Yes!</strong> We will provide meals at several times throughout the event, as well as a snack-bar where you can get light refreshments throughtout the day. The food and drinks are available free of charge.</p>
-                    <p>Please let us know when reserving your ticket if you have any allergies or dietary requirements, or contact us directly as soon as possible before the event.</p>
-                </div>
-                <div class="faq-post">
-                    <h2>What should I bring?</h2>
-                    <p><ul>
-                        <li>A Laptop</li>
-                        <li>A Charger for all of your devices (phone, laptop, tablets, etc.)</li>
-                        <li>Toiletries (deoderant, toothbrush, toothpaste, etc.)</li>
-                        <li>A Change of Clothes (for sleeping and for the next day)</li>
-                    </ul></p>
-                </div>
-                <div class="faq-post">
-                    <h2>What if I don't know how to code?</h2>
-                    <p>That is not a problem! A great way to learn how to code is by attending a hackathon. It's an event for like-minded people to share what they are interested in and teach each-other what they are passionate about, whether its coding, electronics or anything else you want to know about. You never know what new skill you might pick up! You can also ask specific questions to our mentors and in the Discord server, where people are there to help. </p>
-                </div>
-                <div class="faq-post">
-                    <h2>I don't have a team</h2>
-                    <p>Don't worry! Many people don't have a team when they turn up to a hackathon. You will be able to meet people and network before the hacking begins, and we also have our Discord server where people are looking for teams and teams are looking for members. </p>
-                </div>
-                <div class="faq-post">
-                    <h3>Code of Conduct</h3>
-                    <p>We will be following the Hack Code of Conduct, which can be found <a href="http://hackcodeofconduct.org/">here</a>.</p>
-                </div>
-                <h3>Join Us!</h3>
-                <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
-            </div>
-            <div class="google-maps">
-                <div id="faq-slit-bottom"></div>
-                <iframe width="100%" height="500px" frameBorder="0" src="https://a.tiles.mapbox.com/v4/alexmusethemes.18gfnp97.html?access_token=pk.eyJ1IjoiYWxleG11c2V0aGVtZXMiLCJhIjoiY2lrOGtnOWp0MDAxcXZ5bTg2bnR2Mmo1cSJ9._0Ye5dZotjyEMAnd1Qno6Q"></iframe>
-                <div id="sponsor-slit-bottom"></div>
+                <h3>New and improved site coming soon...</h3>
             </div>
         </section>
         <section id="sponsors">
@@ -195,10 +92,11 @@
                 <h2>Our Sponsors</h2>
                 <hr/>
                 <h3>Without the help of our sponsors HackTheMidlands simply would not be possible. Our sponsors are wonderful, have loads of experience and are here to help! We will be releasing more sponsors as we get closer to the event, and if you're interested in becoming a sponsor for HackTheMidlands 2019 then please register your interest below!</h3>
+                <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
                 <div class="sponsors-list">
                     <div class="building">
-                        <img class="cat-icon" src="./images/building.svg"/>
-                        <h2>Building Sponsor</h2>
+                        <img class="cat-icon" src="./images/platinum-medal.svg"/>
+                        <h2>Platinum Sponsor</h2>
                         {% for sponsor in site.data.sponsors.building %}
                         <div class="sponsor-icons">
                             <a href="{{ sponsor.link }}"><img src="{{ sponsor.logo }}"/></a>
@@ -243,7 +141,6 @@
                         {% endfor %}
                     </div>
                 </div>
-                <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
             </div>
             <div id="sponsor-slit-top"></div>
         </section>
@@ -267,7 +164,8 @@
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>{{ person.name }}</h3>
-                                <h5>{{ person.role }}</h5>
+                                <h5>{{ person.title }}</h5>
+                                <h6>{{ person.role }}</h6>
                             </div>
                         </div>
                     </div>
