Add a bit of sparkle

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             }
         </style>
 	</head>
-	
+
     <body>
       <div class="nav-mobile-content-container">
         <div id="mobile-close">
@@ -84,7 +84,7 @@
         </section>
         <section id="event-countdown">
             <div class="container">
-                <h3>New and improved site coming soon...</h3>
+                <h3>✨New and improved site coming soon✨</h3>
             </div>
         </section>
         <section id="sponsors">
