Add mailto link in hero

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands 5.0? </span></span></h1>
                 <h3>22<sup>nd</sup> - 25<sup>th</sup> October, 2020</h3>
                 <a href="sponsorship.pdf"><button id="apply-button">Sponsor Us</button></a>
+                <a href="mailto:hello@hackthemidlands.com">
+                    <button id="email-button">
+                       Say hello!
+                    </button>
+                </a>
 
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
